--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/GiocomoLab">View on GitHub</a>
 
           <h1 id="project_title">Giocomo Lab</h1>
-          <h2 id="project_tagline">The Giocomo Lab integrates electrophysiology, behavior, gene manipulations, optogenetics and computational modeling to study how single-cell biophysics and network dynamics interact to mediate spatial memory and navigation</h2>
+          <h2 id="project_tagline"></h2>
 
         </header>
     </div>
